# License-Expiration-Checker

./: CMakeLists.txt  License Expiration Checker.sln  README.md  build.sh
.cpptest/.dtpengine/.cpptest/com.parasoft.flowanalysis.cpp.core/cfg_cache/: classes  graphs.data  graphs.key  language.data  language.key
.cpptest/.dtpengine/.cpptest/com.parasoft.xtest.cpp.launcher/bundle1/: bundle.info
.cpptest/.dtpengine/.cpptest/com.parasoft.xtest.cpp.launcher/bundle10/: bundle.info
.cpptest/.dtpengine/.cpptest/com.parasoft.xtest.cpp.launcher/bundle100/: bundle.info
.cpptest/.dtpengine/.cpptest/com.parasoft.xtest.cpp.launcher/bundle11/: bundle.info
.cpptest/.dtpengine/.cpptest/com.parasoft.xtest.cpp.launcher/bundle12/: bundle.info
.cpptest/.dtpengine/.cpptest/com.parasoft.xtest.cpp.launcher/bundle13/: bundle.info
.cpptest/.dtpengine/session_20250105_142157/: License Expiration Checker.bdf  bdf.lst  engine.properties  modules.properties  project.properties  tested_files.txt
.cpptest/.dtpengine/session_20250105_142157/reports/: report.xml
.cpptest/License Expiration Checker/common-category/iscpp/: main.cpp.iscpp1348137292006487374
.parasoft.dat/.solutions/License Expiration Checker/session_results_report_xml/: report_core.xml  session_data.xml
License Expiration Checker/: License Expiration Checker.vcxproj  config.txt  main.cpp
include/: date_utils.h  file_utils.h  license_checker.h
sample_licenses/: expired.lic  jetbrains.txt  office.json  sample.xml
src/: date_utils.cpp  file_utils.cpp  license_checker.cpp  main.cpp
(+114 files in other folders)
